objects/ortoo_qra__Global_Assignment_Quota__c.object
<CustomObject>
    <fields>
        <fullName>ortoo_qra__Daily__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Daily</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Monthly__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Global_Assignment_Quotas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Weekly__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Global Assignment Quota</label>
    <nameField>
        <label>Global Assignment Quota Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Assignment Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>